feat: :sparkles: add support for editing acme email and git settings from the ui
